--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,33 @@
-#ant stuff
-/bin/
-/download/
-#Remove OS generated garbage
-*/.DS_Store
-.DS_Store
-.DS_Store?
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
-#gradle stuff
-/.gradle
-/build/
-/run/
-#IDEA files from Gradle
+# gradle
+
+.gradle/
+build/
+out/
+classes/
+
+# eclipse
+
+*.launch
+
+# idea
+
 .idea/
-/*.iml
-/*.ipr
-/*.iws
-#Vim backups
-*~
-#manual version override
-version.properties
-#eclipse stuffs
-/*.classpath
-/*.project
-/.settings/
-/*.launch
-/out
+*.iml
+*.ipr
+*.iws
+
+# vscode
+
+.settings/
+.vscode/
+bin/
+.classpath
+.project
+
+# macos
+
+*.DS_Store
+
+# fabric
+
+run/
