--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,16 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
 
-mod_version=1.6
+# Fabric Properties
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.17.1
+	yarn_mappings=1.17.1+build.39
+	loader_version=0.11.6
 
-# Minecraft Version Information
-minecraft_version=1.16.5
-minecraft_range=[1.16.5,1.17)
+# Mod Properties
+	mod_version = 1.0.0
+	maven_group = com.example
+	archives_base_name = fabric-example-mod
 
-# Forge Version Information
-loader_range=[33.0,)
-forge_version=36.1.1
-forge_range=[36.1.1,)
-
-# Mappings Information
-mappings_version=20200916-1.16.2
-
-# Build dependencies
-jei_version=1.16.4:7.6.1.65
+# Dependencies
+	fabric_version=0.37.2+1.17
